--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "main": "server.js",
   "dependencies": {
     "express": "^4.17.1",
-    "mongojs": "^3.1.0"
+    "mongojs": "^3.1.0",
+    "mongoose": "^5.10.5"
   },
   "devDependencies": {
     "concurrently": "^4.1.0",
