--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "description": "",
   "main": "server.js",
   "dependencies": {
+    "axios": "^0.20.0",
     "express": "^4.17.1",
     "mongojs": "^3.1.0",
     "mongoose": "^5.10.5"
