--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
   "dependencies": {
     "axios": "^0.20.0",
     "express": "^4.17.1",
+    "moment": "^2.29.0",
     "mongojs": "^3.1.0",
     "mongoose": "^5.10.5"
   },
