--- a/package.json
+++ b/package.json
@@ -12,7 +12,8 @@
     "moment": "^2.29.1",
     "mongojs": "^3.1.0",
     "mongoose": "^5.10.5",
-    "react-big-calendar": "^0.28.1"
+    "react-big-calendar": "^0.28.1",
+    "react-datetime-picker": "^3.0.4"
   },
   "devDependencies": {
     "concurrently": "^4.1.0",
