--- a/package.json
+++ b/package.json
@@ -4,14 +4,15 @@
   "description": "",
   "main": "server.js",
   "dependencies": {
-    "if-env": "^1.0.4",
     "axios": "^0.20.0",
     "bcrypt": "^5.0.0",
     "cookie-parser": "^1.4.5",
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
+    "if-env": "^1.0.4",
     "jsonwebtoken": "^8.5.1",
     "moment": "^2.29.1",
+    "moment-timezone": "^0.5.31",
     "mongojs": "^3.1.0",
     "mongoose": "^5.10.5",
     "react-big-calendar": "^0.28.1",
